syntax = "proto3";

option csharp_namespace = "MyTest";

import "google/protobuf/empty.proto";

package greet;


service Greeter {
    rpc DataOperation (google.protobuf.Empty) returns (HelloReply);

    rpc RedisOperation (google.protobuf.Empty) returns (HelloReply);

    rpc MongoOperation (google.protobuf.Empty) returns (HelloReply);

    rpc LogOperation (google.protobuf.Empty) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
